[package]
name = "quantum"
version = "0.1.0"
authors = ["Brodie Knight <merlotec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
glsl-to-spirv = "0.1.7"

[features]
metal = ["rendy/metal"]
dx12 = ["rendy/dx12"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]

[dependencies]
rendy = "0.4.1"
nalgebra = "0.19.0"
failure = "0.1.6"
image = "0.22.3"
lazy_static = "1.4.0"

[dependencies.legion]
path="../legion/"